syntax = "proto3";

package aggkit.prover.v1;

// Service for generating aggchain proof.
service AggchainProofService {
  // Generates a aggchain proof for a given start_block.
  rpc GenerateAggchainProof(GenerateAggchainProofRequest) returns (GenerateAggchainProofResponse);
}

// The request message for generating aggchain proof.
message GenerateAggchainProofRequest {
  // The start block for which the aggchain proof is requested.
  uint64 start_block = 1;
  // The max end block for which the aggchain proof is requested.
  uint64 max_end_block = 2;
  // L1 Info tree hash.
  bytes l1_info_tree_hash = 3;
  // L1 Info tree leaf.
  bytes l1_info_tree_leaf = 4;
  // L1 Info tree proof.
  repeated bytes l1_info_tree_proof = 5;
}

// The aggchain proof response message.
message GenerateAggchainProofResponse {
  // TODO - Define the type of aggchain proof.
  // The start block of the aggchain proof.
  bytes aggchain_proof = 1;
  // The start block of the aggchain proof.
  uint64 start_block = 2;
  // The end block of the aggchain proof.
  uint64 end_block = 3;
}
